force-app/main/default/objects/cdcpc__RD_Girdle_Cover_Part_Number__c/cdcpc__RD_Girdle_Cover_Part_Number__c.object-meta.xml
<CustomObject>
    <label>RD Girdle Cover Part Number</label>
    <nameField>
        <label>RD Girdle Cover Part Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RD Girdle Cover Part Number</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>