force-app/main/default/objects/cdcpc__RD_Girdle_Cover_Part_Number__c/fields/cdcpc__Thick_Code__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__Thick_Code__c</fullName>
    <label>Thick Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>