force-app/main/default/objects/cdcpc__RD_Girdle_Cover_Part_Number__c/listViews/cdcpc__All.listView-meta.xml
<ListView>
    <fullName>cdcpc__All</fullName>
    <columns>NAME</columns>
    <columns>cdcpc__Thickness__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>